syntax = "proto3";
package api;

import "google/protobuf/timestamp.proto";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayMorning (MorningRequest) returns (MorningReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}


// The response message containing the greetings
message HelloReply {
  string message = 1;
  google.protobuf.Timestamp now = 2;
}

message MorningRequest {
  string name = 1;
}
message MorningReply {
  string message = 1;
  google.protobuf.Timestamp now = 2;
}
